fix bad logout button reflow on mobile

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,4 +1,17 @@
 .logout_button {
-  margin-top: 10px;
-  text-align: right;
+  margin-top: -.4em;
+  float: right;
+}
+
+$EMBIGGEN: 200%;
+
+.user_icon {
+  float: left;
+  font-size: $EMBIGGEN;
+  padding-right: .5em;
+}
+
+.user_name {
+  font-size: $EMBIGGEN;
+  font-weight: bold;
 }
